# agent-observer

./: .gitignore  Cargo.toml  PLAN.md  install.sh
src/: active_watch.rs  config.rs  hotkey.rs  main.rs  remote.rs  sessions.rs
