[package]
name = "agent-observer"
version = "0.1.0"
edition = "2021"
description = "Always-on-top top bar overview of ongoing Claude Code sessions (XFCE/X11)"

[[bin]]
name = "agent-observer"
path = "src/main.rs"

[dependencies]
gtk = { version = "0.18", package = "gtk", features = ["v3_24"] }
gdk = "0.18"
gdkx11 = "0.18"
glib = "0.18"
x11rb = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"

[profile.release]
opt-level = 2
lto = true
